[gd_scene load_steps=17 format=3 uid="uid://cyb8oxg7okohu"]

[ext_resource type="Script" path="res://Scenes/Mobs/FlyingEye/flying_eye.gd" id="1_8imbd"]
[ext_resource type="Script" path="res://Scripts/Mobs/health.gd" id="2_g0s14"]
[ext_resource type="Texture2D" uid="uid://phjh83ntvkpg" path="res://Assets/Art/v1.1 dungeon crawler 16X16 pixel pack/enemies/flying creature/fly_anim_f0.png" id="3_nn3pd"]
[ext_resource type="Texture2D" uid="uid://dm380yaeddt0q" path="res://Assets/Art/v1.1 dungeon crawler 16X16 pixel pack/enemies/flying creature/fly_anim_f1.png" id="4_x57q6"]
[ext_resource type="Texture2D" uid="uid://3sux545yp6ha" path="res://Assets/Art/v1.1 dungeon crawler 16X16 pixel pack/enemies/flying creature/fly_anim_f2.png" id="5_2fiub"]
[ext_resource type="Texture2D" uid="uid://bwnedxpm4bvwm" path="res://Assets/Art/v1.1 dungeon crawler 16X16 pixel pack/enemies/flying creature/fly_anim_f3.png" id="6_uoc1o"]
[ext_resource type="Script" path="res://Scenes/Mobs/Goblin/state_machine.gd" id="7_egkgm"]
[ext_resource type="Script" path="res://Scenes/Mobs/FlyingEye/Idle.gd" id="8_uei1k"]
[ext_resource type="Script" path="res://Scenes/Mobs/FlyingEye/Follow.gd" id="9_w2cmm"]
[ext_resource type="Script" path="res://Scenes/Mobs/FlyingEye/Wander.gd" id="10_yti18"]
[ext_resource type="Script" path="res://Scenes/Mobs/FlyingEye/Death.gd" id="11_jveva"]

[sub_resource type="SpriteFrames" id="SpriteFrames_i14yq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nn3pd")
}, {
"duration": 1.0,
"texture": ExtResource("4_x57q6")
}, {
"duration": 1.0,
"texture": ExtResource("5_2fiub")
}, {
"duration": 1.0,
"texture": ExtResource("6_uoc1o")
}],
"loop": true,
"name": &"flying",
"speed": 10.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_qq5xk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_30fcm"]
radius = 155.003

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fwq7y"]
size = Vector2(10, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4ts6"]
size = Vector2(8, 7)

[node name="FlyingEye" type="CharacterBody2D" groups=["mobs"]]
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_8imbd")

[node name="Health" type="Node" parent="."]
script = ExtResource("2_g0s14")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i14yq")
animation = &"flying"

[node name="debug" type="Label" parent="."]
offset_left = -23.0
offset_top = -31.0
offset_right = 26.0
offset_bottom = -8.0
text = "debug"
label_settings = SubResource("LabelSettings_qq5xk")

[node name="DetectionRange" type="Area2D" parent="."]
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_30fcm")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_fwq7y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_t4ts6")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 500.0
navigation_layers = 2
avoidance_enabled = true
avoidance_layers = 2
avoidance_mask = 2
debug_enabled = true

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("7_egkgm")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("8_uei1k")

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]

[node name="Follow" type="Node2D" parent="StateMachine"]
script = ExtResource("9_w2cmm")

[node name="FollowTimer" type="Timer" parent="StateMachine/Follow"]
wait_time = 0.2

[node name="Wander" type="Node2D" parent="StateMachine"]
script = ExtResource("10_yti18")

[node name="WanderTimer" type="Timer" parent="StateMachine/Wander"]

[node name="Death" type="Node2D" parent="StateMachine"]
script = ExtResource("11_jveva")

[connection signal="area_entered" from="DetectionRange" to="StateMachine/Idle" method="_on_detection_range_area_entered"]
[connection signal="area_entered" from="DetectionRange" to="StateMachine/Follow" method="_on_detection_range_area_entered"]
[connection signal="area_entered" from="DetectionRange" to="StateMachine/Wander" method="_on_detection_range_area_entered"]
[connection signal="area_exited" from="DetectionRange" to="StateMachine/Idle" method="_on_detection_range_area_exited"]
[connection signal="area_exited" from="DetectionRange" to="StateMachine/Follow" method="_on_detection_range_area_exited"]
[connection signal="area_exited" from="DetectionRange" to="StateMachine/Wander" method="_on_detection_range_area_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="StateMachine/Idle/IdleTimer" to="StateMachine/Idle" method="_on_idle_timer_timeout"]
[connection signal="timeout" from="StateMachine/Follow/FollowTimer" to="StateMachine/Follow" method="_on_follow_timer_timeout"]
[connection signal="timeout" from="StateMachine/Wander/WanderTimer" to="StateMachine/Wander" method="_on_wander_timer_timeout"]
